this file have some changes

--- a/formlogin.html
+++ b/formlogin.html
@@ -8,7 +8,7 @@
        <fieldset>
         <legend>SignIn</legend>
         <label for="email">Email:</label><br>
-         <input type="email" placeholder="Enter Your Email" id="email"><br>
+         <input type="email" placeholder="Enter Your Email" id="email" required><br>
          <br>
         
 
@@ -17,11 +17,7 @@
          <input type="password" placeholder=" Enter Your Password" id="password">
          <br>
          <br>
-         <label for="confirm password">Password</label>
-         <br>
-         <input type="password" placeholder=" Confirm Your Password" id="confirm password">
-         <br>
-         <br>
+        
          <input type="submit" value="SignIn">
 
 
