--- a/form.html
+++ b/form.html
@@ -1,33 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Forms - SignUp</title>
+    <title>Forms - SignIn</title>
 </head>
 <body>
     <form>
-        <label for="name"> Full Name:</label><br>
-      <input type="text" placeholder="Enter Your Name" id="name"><br>
-      <br>
-
+        <fieldset>
+        <legend>SignIn</legend>
         <label for="email">Email:</label><br>
          <input type="email" placeholder="Enter Your Email" id="email"><br>
          <br>
 
-         <label for="age">Age</label><br>
-         <input type="number" placeholder="Enter Your Age" id="age"><br>
-         <br>
-
+        
          <label for="password">Password</label>
          <br>
          <input type="password" placeholder=" Enter Your Password" id="password">
          <br>
          <br>
-         <label for="confirm password">Password</label>
+        
          <br>
-         <input type="password" placeholder=" Confirm Your Password" id="confirm password">
-         <br>
-         <br>
-         <input type="submit" value="Register">
+         <input type="submit"value="signIn">
 
 
 
