--- a/formlogin.html
+++ b/formlogin.html
@@ -6,19 +6,26 @@
 <body>
     <form>
        <fieldset>
-        <legend>SignIn</legend>
+        <legend>Login</legend>
+        <label for="name">Name:</label><br>
+        <input type="text" placeholder="Enter Your Name" id="email" required><br>
+        <br>
         <label for="email">Email:</label><br>
          <input type="email" placeholder="Enter Your Email" id="email" required><br>
          <br>
         
 
-         <label for="password">Password</label>
+         <label for="password">Password:</label>
          <br>
          <input type="password" placeholder=" Enter Your Password" id="password">
          <br>
          <br>
         
-         <input type="submit" value="SignIn">
+         <label for="confirm-password"> Confirm-Password:</label>
+         <br>
+         <input type="confirm-password" placeholder=" Confirm Your Password" id="password"><br>
+         <br>
+         <input type="submit"value=Register">
 
 
 
